fix: markdown alignment

--- a/src/scss/botchat.scss
+++ b/src/scss/botchat.scss
@@ -736,11 +736,11 @@
     }
 
     .format-markdown ol {
-        padding-left: 30px;  /* numbers are right-aligned to the period */
+        padding-left: 30px !important;  /* numbers are right-aligned to the period */
     }
 
     .format-markdown ul {
-        padding-left: 33px;
+        padding-left: 33px !important;
     }
 
 /* browser scrollbar customization */
